# anti_security

./: .gitignore  README.md  eslint.config.js  index.html  mock.md  package-lock.json  package.json  paddleoany.md  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  yap.md  ödemeekranprompt.md  ödemeolayıi.md  öneri.md
.agents/rules/: fikircan.md  full-.md  girhub.md  reklam.md  security.md  seoo.md
.github/workflows/: securify-scan.yml
api/: badge.ts  create-checkout.ts  paddle-webhook.ts  scan-site.ts  shopier-callback.ts  shopier-return.ts  verify-paddle-checkout.ts  verify-secret.ts  verify-token.ts
cli/: Cargo.toml  package.json
cli/scripts/: install-rust.ps1  publish.ps1
cli/src/: config.rs  entropy.rs  hook.rs  main.rs  report.rs  rules.rs  scanner.rs
public/: contact.html  license.html  pgp.html  privacy.html  refund.html  robots.txt  security-policy.html  sitemap.xml  terms.html
src/: App.tsx  index.css
src/cli/: index.ts
src/components/: Charts.tsx  CookieBanner.tsx  EnterpriseAnalytics.tsx  FooterModal.tsx  GithubAuthModal.tsx  GlowCard.tsx  SecurifyAuditor.tsx  SecurifyBanner.tsx  SecurifyConsoleDocs.tsx  SecurifyContact.tsx  SecurifyDashboard.tsx  SecurifyFAQ.tsx  SecurifyFeatures.tsx  SecurifyFooter.tsx  SecurifyHero.tsx  SecurifyHomeScanner.tsx  SecurifyInstall.tsx  SecurifyIntegrations.tsx  SecurifyNavbar.tsx  SecurifyPricing.tsx  SecurifyROI.tsx  SecurifyRules.tsx  SecurifySandbox.tsx  SecurifyShortcuts.tsx  SecurifySimulator.tsx  SecurifyTestimonials.tsx  SecurifyTrust.tsx  TerminalModal.tsx  (+1 more)
(+12 files in other folders)
