[package]
name = "securify"
version = "0.1.0"
edition = "2021"
description = "A client-side credential leak detection CLI. Scan your codebase for secrets, API keys, and credentials before they reach production."
license = "MIT"
repository = "https://github.com/omer/istanbul_api"

[[bin]]
name = "securify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
toml = "0.8"
colored = "2"
